--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = frame_editor
-	base = 7656362
-	trimbase = 
+	base = 2c70287
+	trimbase = 7656362
 	parent = upstream
 	previous = dd79c69
