--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2c70287
+	base = 6b17b50
 	trimbase = 
 	parent = release/kinetic/frame_editor
-	previous = 
+	previous = 2c70287
