--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5b31d5c
+	base = efece82
 	trimbase = 
 	parent = arch/kinetic/frame_editor
-	previous = 
+	previous = 5b31d5c
